
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct shmid_ds {int shm_internal; } ;


 int IPC_PRIVATE ;
 int IPC_STAT ;
 int SHM_R ;
 int SHM_W ;
 int printf (char*,...) ;
 int shmctl (int,int ,struct shmid_ds*) ;
 int shmget (int ,int,int) ;

int main(int argc, char *argv[])
{
  int shm = shmget( IPC_PRIVATE, 0x1337, SHM_R | SHM_W );

  if (shm < 0)
    {
      printf("shmget: failed");
      return 6;
    }

  struct shmid_ds lolz;

  int res = shmctl( shm, IPC_STAT, &lolz );
  if (res < 0)
    {
      printf("shmctl: failed");
      return 1;
    }

  printf( "%p\n", lolz.shm_internal );

}
