; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_39147.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_39147.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shmid_ds = type { i32 }

@IPC_PRIVATE = common dso_local global i32 0, align 4
@SHM_R = common dso_local global i32 0, align 4
@SHM_W = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"shmget: failed\00", align 1
@IPC_STAT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"shmctl: failed\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"%p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.shmid_ds, align 4
  %8 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %9 = load i32, i32* @IPC_PRIVATE, align 4
  %10 = load i32, i32* @SHM_R, align 4
  %11 = load i32, i32* @SHM_W, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @shmget(i32 %9, i32 4919, i32 %12)
  store i32 %13, i32* %6, align 4
  %14 = load i32, i32* %6, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i32 6, i32* %3, align 4
  br label %30

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* @IPC_STAT, align 4
  %21 = call i32 @shmctl(i32 %19, i32 %20, %struct.shmid_ds* %7)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %30

26:                                               ; preds = %18
  %27 = getelementptr inbounds %struct.shmid_ds, %struct.shmid_ds* %7, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %28)
  br label %30

30:                                               ; preds = %26, %24, %16
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @shmget(i32, i32, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @shmctl(i32, i32, %struct.shmid_ds*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
